<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/header"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/banner"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/outputView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorBlack"
        />

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Drawn"
        android:layout_marginStart="12dp"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:text="@string/Predicted"
        android:textSize="@dimen/text_size" />

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_alignParentEnd="true"
        android:text="@string/Confidence"
        android:textSize="@dimen/text_size" />

    <TextView
        android:textColor="@color/colorBlack"
        android:id="@+id/prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:textSize="@dimen/text_size_large"
        android:text="@string/value_0"/>

    <TextView
        android:id="@+id/confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_large"
        android:text="@string/value_0"/>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView5">

        <ImageView
            android:layout_marginTop="8dp"
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_height="370dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/square" />

        <TextView
            android:id="@+id/processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Processing..."
            android:textColor="@color/colorwhite"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size"
            android:visibility="invisible"
            />

    </RelativeLayout>

</RelativeLayout>
